# BU-Autonomous-RaceCar

./: .out.txt.swp  README.md  aruco_test.cpp  index.html  run.sh
PID/: .#pid2d_main.c  CMakeLists.txt  PID.cpp  PID.h  a.out  controller_main  controller_main.cpp  makefile  pid2d_main  pid2d_main.c  pid2d_test  pid_main.c  pid_source.c  pid_source.h  run.sh  setpoint.h  structexample.cpp  test.c  test.cpp
actuation/: README.md  command  command.c  makefile  semaphores.c  servo.c  shared_def.h  userinput.c
assets/css/: main.css
assets/js/: main.js
assets/sass/: ie8.scss  main.scss
include/: Coordinate.cpp  Coordinate.h  CoordinateMap.cpp  CoordinateMap.h  Setpoint_Queue.cpp  Setpoint_Queue.h  pid_params.h  pid_source.c  pid_source.h  setpoint.h  shared_def.h
path_planning/: AStar.cpp  AStar.hpp  Astar.cpp  PathFinding.h  README.md  SearchCell.h  alexnet.py  basicio.py  img_process.py  main.cpp  obstacles_coords.hpp  shared_path.hpp  train_model.py  vehicle_detector.py
path_planning/cvdetect/: collect_training_data.py  get_keys.py  mlp_training.py  obstacle_detect.cpp  obstacle_detect.py  picam_calibration.py  rc_driver.py  resize_img.py
sensing/: CMakeCache.txt  Makefile  README.md  aruco-uninstalled.pc  aruco_print_marker.cpp  cmake_install.cmake  cmake_uninstall.cmake
sensing/cmake/: findDependencies.cmake
sensing/src/: Makefile  cameraparameters.h  cmake_install.cmake
sensing/utils/: #aruco_test.cpp#  CMakeCache.txt  Makefile  aruco-uninstalled.pc  aruco_print_marker  aruco_print_marker.cpp  aruco_simple  aruco_test.cpp  cmake_install.cmake  (+3 more)
(+56 files in other folders)
